# streamlit_basic

./: .gitignore  dataframe_tool.py  example_plt.py  example_plt_.py  load_json.py  pyproject.toml  test.py  weather_data.csv  weather_data.json
app/: app.py  weather_app.py
weather/: main_v1.py  main_v2.py  main_v3.py
