[tool.poetry]
name = "streamlit-basic"
version = "0.1.0"
description = ""
authors = ["hajyhia <shehab.hajyhia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
streamlit = "^1.41.1"
datetime = "^5.5"
pytz = "^2024.2"
timezonefinder = "^6.5.7"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
